fixing scroll on Safari

--- a/src/GlobalStyles.scss
+++ b/src/GlobalStyles.scss
@@ -12,6 +12,7 @@ html {
   font-size: 65.3%;
   overflow-y: auto;
   width: auto;
+  scroll-behavior: smooth;
 }
 body {
   font-family: -apple-system, BlinkMacSystemFont, "Segoe UI", "Roboto", "Oxygen",
